--- a/index.ipynb
+++ b/index.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "4          70       1                ford torino  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,113 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>displacement</th>\n",
-       "      <th>horsepower</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "      <th>model year</th>\n",
-       "      <th>origin</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>130</td>\n",
-       "      <td>3504</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>165</td>\n",
-       "      <td>3693</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8</td>\n",
-       "      <td>318.0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3436</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3433</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8</td>\n",
-       "      <td>302.0</td>\n",
-       "      <td>140</td>\n",
-       "      <td>3449</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   cylinders  displacement  horsepower  weight  acceleration  model year  \\\n",
-       "0          8         307.0         130    3504          12.0          70   \n",
-       "1          8         350.0         165    3693          11.5          70   \n",
-       "2          8         318.0         150    3436          11.0          70   \n",
-       "3          8         304.0         150    3433          12.0          70   \n",
-       "4          8         302.0         140    3449          10.5          70   \n",
-       "\n",
-       "   origin  \n",
-       "0       1  \n",
-       "1       1  \n",
-       "2       1  \n",
-       "3       1  \n",
-       "4       1  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-1d684d0a0942>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdata_pred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
